# UAVSurveying

./: README.md  checkDev.sh  setdate.sh  startup.sh
services/: gsof.service  lidar.service  roscore.service  roslaunch  roslaunch_lidar
src/: .gitignore
src/livox_high_precision_mapping/gnss_module/apx15/: CMakeLists.txt
src/livox_high_precision_mapping/gnss_module/apx15/include/: minIni.h
src/livox_high_precision_mapping/gnss_module/apx15/launch/: apx15.launch
src/livox_high_precision_mapping/gnss_module/apx15/msg/: GNSS.msg  GSOF.msg
src/livox_high_precision_mapping/gnss_module/apx15/src/: Utils.cpp  main.cpp
src/livox_high_precision_mapping/livox_mapping/: CMakeLists.txt
src/livox_high_precision_mapping/livox_mapping/launch/: apx_lidar_raw.launch  livox_mapping.launch  mapping_online.launch  mapping_online_gsof.launch
src/livox_high_precision_mapping/livox_mapping/msg/: GSOF.msg  RawUbx.msg
src/livox_high_precision_mapping/livox_mapping/src/: Utils.cpp  Utils.h  livox_mapping_case.cpp  minIni.cpp
src/livox_ros_driver/: CMakeLists.txt
src/livox_ros_driver/config/: livox_lidar_config.json
src/livox_ros_driver/launch/: livox_lidar_rviz.launch
src/livox_ros_driver/livox_ros_driver/: Utils.cpp  lds_lidar.cpp
